# porquilo-web

./: .dockerignore  .env.example  .gitignore  agents.md
server/: .coveragerc  COVERAGE.md  agents.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_foundation.py  002_food_catalog.py  003_recipe_model.py  004_log_entries_skips.py  005_goals_body_metrics.py  006_indexes.py  007_user_overrides_sync_log.py  008_remove_ingredients_table.py  009_food_data_columns.py  010_app_settings.py  011_food_display_name.py  012_category_completeness.py  013_off_import_subprocess.py  014_foods_name_source_indexes.py  015_food_search_tokens.py  016_users_auth.py  017_pairing_codes.py
server/src/porquilo/: cli.py  main.py
server/src/porquilo/core/: config.py  database.py  deps.py  errors.py  llm.py
server/src/porquilo/jobs/: off_import.py
server/src/porquilo/models/: __init__.py  app_setting.py  auth_token.py  body_metric.py  food.py  food_nutrient.py  food_search_token.py  food_source.py  food_variant.py  goal.py  goal_nutrient.py  ingredient.py  log_entry.py  log_entry_nutrient.py  meal.py  meal_skip.py  nutrient_definition.py  pairing_code.py  recipe.py  recipe_ingredient.py  sync_log.py  tracked_nutrient.py  user.py  user_override.py
server/src/porquilo/routers/: admin.py  auth.py  diary.py  entries.py  foods.py  meals.py  profile.py  settings.py  setup.py  sync.py  users.py  version.py
server/src/porquilo/services/: __init__.py  auth_service.py  nutrients.py  (+6 more)
server/tests/: conftest.py  test_001_foundation.py  test_002_food_catalog.py  test_003_recipe_model.py  test_004_log_entries_skips.py  test_005_goals_body_metrics.py  test_006_indexes.py  test_007_user_overrides_sync_log.py  test_008_remove_ingredients_table.py  test_009_food_data_columns.py  test_011_display_name.py  test_015_food_search_tokens.py  test_016_users_auth.py  test_017_pairing_codes.py  test_api_admin.py  test_api_auth.py  test_api_diary.py  test_api_entries.py  test_api_foods.py  test_api_meals.py  test_api_pairing.py  test_api_profile.py  test_api_setup.py  test_api_users.py  test_cli.py  test_foods_suggestions.py  test_infra.py  test_llm_client.py  test_models.py  test_name_normalization_service.py  test_nutrients_service.py  test_search_tokens.py  test_usda_service.py
(+89 files in other folders)
