[project]
name = "porquilo"
version = "0.1.0"
description = "The server for the porquilo application, supports the web app and mobile apps"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "alembic",
    "pydantic-settings",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "testcontainers[postgres]",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "testcontainers>=4.14.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/porquilo"]
