[project]
name = "porquilo"
version = "0.1.0"
description = "The server for the porquilo application, supports the web app and mobile apps"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "sqlmodel",
    "alembic",
    "pydantic-settings",
    "psycopg2-binary>=2.9.12",
    "coverage>=7.14.1",
    "httpx>=0.27",
    "openai>=2.41.0",
    "openfoodfacts>=1.0.0",
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "testcontainers[postgres]",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*default date adapter is deprecated.*:DeprecationWarning:sqlalchemy",
    "ignore:.*default datetime adapter is deprecated.*:DeprecationWarning:sqlalchemy",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "testcontainers>=4.14.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/porquilo"]
